--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "dairy-app",
   "version": "0.1.0",
+  "homepage": "https://drawmet.github.io/dairy-app/",
   "private": true,
   "dependencies": {
     "prop-types": "^15.6.2",
@@ -16,7 +17,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "dairy-app -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
