--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
-    "deploy": "dairy-app -d build"
+    "deploy": "master -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
