--- a/package.json
+++ b/package.json
@@ -6,10 +6,13 @@
     "prop-types": "^15.6.2",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
+    "react-hotkeys": "^1.1.4",
     "react-redux": "^6.0.0",
     "react-scripts": "2.1.1",
+    "react-toastify": "^4.5.1",
     "recompose": "^0.30.0",
     "redux": "^4.0.1",
+    "redux-persist": "^5.10.0",
     "redux-thunk": "^2.3.0"
   },
   "scripts": {
